Remove MaxPermSize
Fixes gh-3578